<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Bible</string>
    <string name="action_goto">Go to...</string>
    <string name="action_search">Search</string>
    <string name="title_activity_show_book">Book</string>
    <string name="empty_text"></string>
    <string name="example_text">example</string>
    <string name="loading">Loading&#8230;</string>
    <string name="filtro">Filter:</string>
    <string name="chapter">Chapter</string>
    <string name="book_selection_message">Select the book you want to go:</string>
    <string name="book_selection_title">Select the book</string>
    <string name="book_selection_button_text">Select</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="download_dialog_title">Translations</string>
    <string name="download_dialog_text">Choose the translation you want to download</string>
    <string name="msg_error_downloading">Error downloading this translation of the Bible, please try again later.</string>
    <string name="msg_user_message_title">System message</string>
    <string name="title_activity_preference">Settings</string>
    <string name="action_setting">Settings</string>
    <string name="lbl_installed">Downloaded translations</string>
    <string name="background_color">Background color</string>
    <string name="font_color">Font color</string>
    <string name="text_size">Font size</string>
    <string name="server_name_title">Change BBl server</string>
    <string name="server_alias_error">The Server [%1$s] doesn\'t exist, do you want change it to use Default?</string>
    <string name="server_alias">BBl Server: </string>
    <string name="default_text">Default</string>
    <string name="menu_set_as_default">Use this translation</string>
    <string name="menu_delete_traduction">Delete this translation</string>
    <string name="deleting">Deleting&#8230;</string>
    <string name="downloading">Downloading&#8230;</string>
    <string name="all_languages">All languages</string>
    <string name="no_downloads_avaliables">No translations are available</string>
    <string name="no_delete_last_translation">It should be at least a translation available</string>
    <string name="msg_translation_deleted">Translation was deleted</string>
    <string name="msg_delete_translation_error">Translation cannot be deleted</string>
    <string name="use_text">Use</string>
    <string name="action_next">Next</string>
    <string name="action_previous">Previous</string>
    <string name="action_add_traslation">Add</string>
    <string name="action_revert">Set Default</string>
    <string name="lbl_check_use_external_storage">Save translation to SD-Card</string>
    <string name="use_external_storage_warning">Downloaded translations won\'t be available anymore, Do you want to continue?</string>
    <string name="no_translations_availables">There are no translations downloaded</string>
    <string name="no_sd_available_title">SD-Card not available</string>
    <string name="no_sd_available_message">SD-Card not available or is not working</string>
    <string name="no_sd_available_message_ask">SD-Card not available, Do you want to use internal storage?</string>
    <string name="message_verse_marked_favorite">Verse %1$s has been highlighted in %2$s</string>
    <string name="message_verse_unmarked_favorite">Verse %1$s was unhighlighted</string>
    
    <string name="action_clear_mark">Clear</string> 
    <string name="action_refresh">Refresh</string>
    <string name="action_test">Test 001</string>
    <string name="maintenance_mode_title">Maintenance :(</string>
    <string name="sorry_maintenance">Sorry! We\'re under maintenance</string>
    <string name="maintenance_text">We are making some updates to the server. We\'ll be back soon, thanks for your patience.</string>
    <string name="action_close">Close</string>
    <string name="action_saved_verses">Highlighted verses</string>
    <string name="sorry_initialization">Sorry! Bible Initializing problem.</string>  
    <string name="title_activity_verse_list">Verse List</string>
    <string name="action_filter_order">Filter/Order</string>
    <string name="no_items_on_verse_list">There are no items to show</string>
    <string name="delete_verse_from_list">Delete</string>
    
    <string name="wait_default_message">Please wait...</string>
    <string name="wait_default_title">My Bible</string>
    <string name="button_retry_text">Retry</string>

</resources>