<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_previous"
        android:icon="@drawable/ic_back"
        android:showAsAction="always"
        android:title="@string/action_previous">
    </item>
    <item
        android:id="@+id/action_next"
        android:icon="@drawable/ic_forward"
        android:showAsAction="always"
        android:title="@string/action_next">
    </item>
    <item
        android:id="@+id/action_goto"
        android:showAsAction="ifRoom"
        android:title="@string/action_goto" android:icon="@android:drawable/ic_menu_search">
    </item>
    <item
        android:id="@+id/action_search"
        android:showAsAction="ifRoom"
        android:title="@string/action_search" android:icon="@android:drawable/ic_menu_search">
    </item>    
     <item
        android:id="@+id/action_saved_verses"
        android:showAsAction="ifRoom"
        android:title="@string/action_saved_verses" android:icon="@drawable/ic_menu_list">
    </item>
    <item
        android:id="@+id/action_setting"
        android:showAsAction="ifRoom"
        android:title="@string/action_setting" android:icon="@android:drawable/ic_menu_manage">
    </item>

</menu>