<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textServerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_alias" />

            <TextView
                android:id="@+id/editServerAlias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/default_text" />
        </LinearLayout>

        <com.actionbarsherlock.internal.widget.IcsSpinner
            android:id="@+id/spn_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_dialog_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/download_dialog_text" />

        <com.actionbarsherlock.internal.widget.IcsSpinner
            android:id="@+id/spn_bbl_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/chkUseExternalStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_check_use_external_storage" />

        <RelativeLayout
            android:id="@+id/relative01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp" >

            <Button
                android:id="@+id/btn_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/download" />

            <Button
                android:id="@+id/btn_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/btn_download"
                android:text="@string/cancel" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>