<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.mcore.myvirtualbible"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PreferenceActivity" >

    <RelativeLayout
        android:id="@+id/setting_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textServerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_alias" />

        <TextView
            android:id="@+id/editServerAlias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/textServerName"
            android:text="@string/default_text" />

        <View
            android:id="@+id/line_3"
            style="@style/Divider"
            android:layout_below="@+id/editServerAlias"
            android:layout_marginTop="6dp" />

        <com.actionbarsherlock.internal.widget.IcsSpinner
            android:id="@+id/spinner_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/line_3"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/text_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/line_3"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_toLeftOf="@id/spinner_font_size"
            android:text="@string/text_size"
            android:textSize="18sp" />

        <View
            android:id="@+id/line_1"
            style="@style/Divider"
            android:layout_below="@+id/spinner_font_size" />

        <com.mcore.myvirtualbible.views.ColorOptionsView
            android:id="@+id/color_options_background"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/line_1"
            android:layout_marginTop="16dp"
            app:titleText="@string/background_color"
            app:valueColor="@android:color/white" >
        </com.mcore.myvirtualbible.views.ColorOptionsView>

        <View
            android:id="@+id/line_2"
            style="@style/Divider"
            android:layout_below="@+id/color_options_background"
            android:layout_marginTop="6dp" />

        <com.mcore.myvirtualbible.views.ColorOptionsView
            android:id="@+id/color_options_fontcolor"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/line_2"
            android:layout_marginTop="16dp"
            app:titleText="@string/font_color"
            app:valueColor="@android:color/black" >
        </com.mcore.myvirtualbible.views.ColorOptionsView>

        <CheckBox
            android:id="@+id/chkUseExternalStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/color_options_fontcolor"
            android:text="@string/lbl_check_use_external_storage" />

        <TextView
            android:id="@+id/lbl_installed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chkUseExternalStorage"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_installed" />

        <com.mcore.myvirtualbible.views.ExpandedListView
            android:id="@+id/list_installed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/lbl_installed" >
        </com.mcore.myvirtualbible.views.ExpandedListView>


    </RelativeLayout>

</ScrollView>